2019-12-13  Dan Čermák  <dan.cermak@posteo.net>

	* src/pkl-env.c (hash_string): Avoid overflow of signed integers
	in hash calculation.

2019-12-13  Dan Čermák  <dan.cermak@posteo.net>

	* src/pk-cmd.c (pk_cmd_get_next_match): Fix buffer overflow.

2019-12-12  Dan Čermák  <dan.cermak@posteo.net>

	* src/pkl-ast.c (pkl_print_type): Fix call to fprintf to use "%s"
	to print a non-constant string.

2019-12-10  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.c (pkl_ast_type_is_complete): Struct types having
	fields with labels are no complete types.
	(pkl_ast_sizeof_type): Assert if a struct type with field labels
	is not marked as complete.
	* testsuite/poke.pkl/offsets-diag-1.pk: New test.

2019-12-08 John Darrington <john@darrington.wattle.id.au>

	* src/pkl-lex. (CHAR): Accept \\ as a CHAR token.
	* testsuite/poke.pkl/chars.pk: Add new test.
	* doc/poke.texi (Characters): Document new escape sequence.

2019-12-01 John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi (Offset Literals):  Change the example to agree with the text.

2019-12-10  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_mul): Do not accept multiplying
	strings.
	* testsuite/poke.pkl/mul-strings-diag-1.pk: New test.

2019-12-10  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y (offset_type_specifier): Allow integer literals as
	offset units.
	* src/pkl-anal.c (pkl_anal1_ps_type_offset): New handler.
	(pkl_phase_anal1): Install handler.
	* testsuite/poke.pkl/casts-offsets-4.pk: New test.
	* testsuite/poke.pkl/cast-offsets-diag-3.pk: Likewise.
	* doc/poke.texi (Offset Types): Mention using integers as offset
	type units.

2019-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-cmd.h: Document the value returned by pk_cmd_exec.
	* src/pk-cmd.c (pk_cmd_exec_script): Fix the value returned by the
	function to match the function prototype documentation.
	* src/poke.c (parse_args): Improve the check for the result value
	of pk_cmd_exec_script.